@@ -1,3 +1,7 @@
+2001-02-15  John Harper  <jsh@eazel.com>
+
+	* stacking-list.c: added debugging assertions
+
 2001-02-13  John Harper  <jsh@eazel.com>
 
 	* version 0.37
